fixed homepage redirect

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: page
 title: Hello internet
 use-site-title: true
 ---
+<meta http-equiv="refresh" content="0; url=/photography" />
 
 <div class="posts-list">
   {% for post in paginator.posts %}
