removed unnecessary stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Hello internet
 use-site-title: true
 ---
-<meta http-equiv="refresh" content="0; url=/photography" />
+<!-- <meta http-equiv="refresh" content="0; url=/photography" />
 
 <div class="posts-list">
   {% for post in paginator.posts %}
@@ -69,4 +69,4 @@ use-site-title: true
   </li>
   {% endif %}
 </ul>
-{% endif %}
+{% endif %} -->
