--- a/internship_report.html
+++ b/internship_report.html
@@ -1,8 +1,9 @@
 ---
 layout: page
-title: TCS internship report
+title: 
 use-site-title: true
 ---
+ Thanks for being curious enough to come here. Check your downloads folder!
 <script>
     window.onload = function(){
       var a = document.createElement("a");
