--- a/quickstart/public/index.html
+++ b/quickstart/public/index.html
@@ -37,7 +37,7 @@
     <meta property="og:title" content="Manas Kale" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://manas96.github.io/" />
+<meta property="og:url" content="https://manas96.github.io/" />
 <meta itemprop="name" content="Manas Kale">
 <meta itemprop="description" content=""><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Manas Kale"/>
@@ -144,7 +144,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://manas96.github.io/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://manas96.github.io/" >
     &copy;  Manas Kale 2023 
   </a>
     <div>
