--- a/search/index.html
+++ b/search/index.html
@@ -54,6 +54,8 @@
     <div class='container'>
       <ul><li class='item'>
   <a href='/'>Home</a></li><li class='item'>
+  <a href='/about/'>About</a></li><li class='item'>
+  <a href='/natural-phenomena/'>Natural Phenomena</a></li><li class='item'>
   <a href='/photography/'>Photography</a></li></ul>
     </div>
   </nav>
